# SLangDemo

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json
Asset/: README.md
Source/: Main.cpp  SDR.cpp  SDR.h
Source/Shaders/: vector_add.slang
memory-bank/: architecture.md  context.md  cur_execution_context.md  plan.md
memory-bank/documents/: 2026-06-22-project-theme-neural-texture-compression.md  2026-06-22-slang-official-examples-survey.md  README.md
